[package]
name = "zfp-sys"
version = "0.1.14"
authors = ["jvo203 <chris.zapart@nao.ac.jp>"]
edition = "2021"
description = "Raw Rust bindings to ZFP (https://github.com/LLNL/zfp)."
repository = "https://github.com/jvo203/zfp-sys"
readme = "README.md"
license = "MIT"
categories = ["compression", "external-ffi-bindings", "science"]

[build-dependencies]
bindgen = "0.69.1"
cmake = "0.1"

[features]
default = []
cuda = []
static = []
