[package]
name = "zfp-sys"
version = "0.4.1"
authors = ["jvo203 <chris.zapart@nao.ac.jp>"]
edition = "2024"
description = "Raw Rust bindings to ZFP (https://github.com/LLNL/zfp)."
repository = "https://github.com/jvo203/zfp-sys"
readme = "README.md"
license = "MIT"
categories = ["compression", "external-ffi-bindings", "science"]

[build-dependencies]
bindgen = "0.72.0"
cmake = "0.1"

[features]
default = []
cuda = []
static = []
round-tight-error = []
